# envelopezero

./: .gitignore  Dockerfile  README.md  docs-architecture.md  docs-domain-plan.md  package-lock.json  package.json  playwright.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  commitlint.yml
.husky/: pre-commit
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 20260219_000001_init.sql  20260220_000001_transaction_split_invariant.sql  20260221_000001_assignments_and_split_checks.sql
apps/api/src/: lib.rs  main.rs  models.rs
apps/api/tests/: api_integration_sqlx.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
docs/: design.md  implementation-plan.md  stage-1-data-contract.md  stage-2-core-workflow.md  stage-3-derived-projection.md  stage-4-ux-coherence.md  stage-5-qa-release-safety.md  stage-6-next-layer-capability.md  ui-brief-ynab-style.md  ui-ia-map.md  ui-task-breakdown.md
infra/: docker-compose.yml
scripts/: check.sh  e2e.spec.ts  smoke.sh
